[package]
name = "morde-rs"
version = "0.1.0"
edition = "2024"
description = "A bunch of common utilities I use across my projects."

[dependencies]
axum = { version = "0.8.6", optional = true }
http = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
eyre = { version = "0.6.12", optional = true }
tracing = "0.1"

[features]
default = []
axum = ["dep:axum"]
eyre = ["dep:eyre"]
